--- a/Les-25.html
+++ b/Les-25.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <script type="text/JavaScript">
-        window.alert("Op deze pagina vindt u een jQuery User interface 'Tabs'-widget met het thema 'Eggplant'. Klik op OK om de website te bekijken en maak gebruik van de drie tabs.");
+        window.alert("Op deze pagina vindt u een jQuery User Interface 'Tabs'-widget met het thema 'Eggplant'. Klik op OK om de website te bekijken en maak gebruik van de drie tabs.");
         </script>
         <noscript>
         Om deze website optimaal te gebruiken is het noodzakelijk om JavaScript te activeren.
